hphp/hack/test/typecheck/modules/internal_keyword_bad.php.exp
File "internal_keyword_bad.php", line 3, characters 3-10:
Cannot use unstable feature: `modules` (Parsing[1002])
